style.css
/* ... */
.wp-block-button__link.has-tertiary-background-color:hover {
  color: var(--clr-tertiary) !important;
}

.wp-block-button__link.has-quaternary-background-color:hover {
  color: var(--clr-quaternary) !important;
}

.wp-block-button__link.has-primary-background-color {
  border-color: var(--clr-primary);
}

.wp-block-button__link.has-secondary-background-color {
  border-color: var(--clr-secondary);
}

.wp-block-button__link.has-tertiary-background-color {
  border-color: var(--clr-tertiary);
}

.wp-block-button__link.has-quaternary-background-color {
  border-color: var(--clr-quaternary);
}

.wp-block-separator {
  border-bottom: 0;
  margin-block: 1.5rem;
  clear: both;
}

.wp-block-separator:not(.is-style-wide):not(.is-style-dots) {
  width: 50%;
}

.wp-block-group {
  clear: both;
}

.wp-block-media-text {
  margin-bottom: 40px;
}

@media screen and (max-width: 1280px) {
  .wp-block-media-text.is-stacked-on-mobile {
    grid-template-columns: 100% !important;
  }
  .wp-block-media-text.is-stacked-on-mobile .wp-block-media-text__media {
    grid-column: 1;
    grid-row: 1;
  }
  .wp-block-media-text.is-stacked-on-mobile .wp-block-media-text__content {
    grid-column: 1;
    grid-row: 2;
  }
}
.wp-block-table td {
  border: 1px solid;
  padding: 5px;
}

.wp-block-cover {
  margin-bottom: 20px;
}
@media screen and (min-width: 992px) {
  .wp-block-cover {
    margin-bottom: 30px;
  }
}

.teaser-box .teaser-img {
  aspect-ratio: 1/1;
  -o-object-fit: cover;
     object-fit: cover;
}
.teaser-box .teaser-content-wrapper .teaser-content {
  height: 100%;
  margin-bottom: 2rem;
}
.teaser-box .links-container {
  padding-top: 20px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.grid-container {
  display: grid;
  grid-template-columns: 100%;
  gap: 2rem;
}
@media screen and (min-width: 768px) {
  .grid-container {
    grid-template-columns: repeat(2, 1fr);
    gap: 2rem 1.5rem;
  }
}
@media screen and (min-width: 1280px) {
  .grid-container {
    grid-template-columns: repeat(3, 1fr);
    gap: 2.5rem 2rem;
  }
  .grid-container .staff-single:first-child {
    grid-column: 1/-1;
    flex-direction: row;
  }
  .grid-container .staff-single:first-child .teaser-img {
    border-radius: 10px 0 0 10px;
    flex: 2;
  }
  .grid-container .staff-single:first-child .teaser-content-wrapper {
    width: 100%;
    text-align: center;
    flex: 3;
  }
  .grid-container .staff-single:first-child .links-container {
    align-items: center;
  }
}

.lightbox-overlay {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background: #404040;
  opacity: 0.6;
  z-index: 9999;
}

.lightbox {
  position: fixed;
  top: 10%;
  right: 10%;
  bottom: 10%;
  left: 10%;
  background-color: #ffffff;
  box-shadow: var(--box-shadow);
  display: flex;
  flex-direction: column;
  z-index: 9999;
  border-radius: 10px;
  transform: scale(1, 0);
  transition: transform 0.3s ease;
  overflow-y: auto;
}
.lightbox.open {
  transform: scale(1);
}
.lightbox .lightbox-close {
  cursor: pointer;
}
.lightbox .lightbox-close::before, .lightbox .lightbox-close::after {
  width: 5px;
  height: 20px;
  right: 20px;
  top: 15px;
  background: #000000;
  position: absolute;
  content: "";
  border-radius: 5px;
  transition: background 0.3s ease-in-out;
}
.lightbox .lightbox-close::before {
  transform: rotate(45deg);
}
.lightbox .lightbox-close::after {
  transform: rotate(-45deg);
}
.lightbox .lightbox-image {
  width: 100%;
  height: 25%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  border-radius: 10px 0 0 0;
}
.lightbox .lightbox-content {
  width: 100%;
  height: 75%;
  padding: 0 2rem;
  border-radius: 0 10px 10px 0;
}
.lightbox .lightbox-content .lightbox-title,
.lightbox .lightbox-content .lightbox-contact-persons,
.lightbox .lightbox-content .contact-form-wrapper {
  text-align: center;
}
.lightbox .lightbox-content .contact-form {
  padding-bottom: 3rem;
}
.lightbox .lightbox-content .lightbox-link {
  margin-top: 1rem;
  padding-bottom: 2rem;
}

@media screen and (min-width: 992px) {
  .lightbox {
    flex-direction: row;
  }
  .lightbox .lightbox-image,
  .lightbox .lightbox-content {
    width: 50%;
    height: 100%;
  }
  .lightbox .lightbox-image {
    border-radius: 10px 0 0 10px;
    position: sticky;
    top: 0;
  }
  .lightbox .lightbox-content {
    padding: 0 3rem;
  }
}
.hidden-mobile {
  display: none !important;
}
@media screen and (min-width: 992px) {
  .hidden-mobile {
    display: block !important;
  }
}

.hidden-laptop {
  display: block !important;
}
@media screen and (min-width: 992px) {
  .hidden-laptop {
    display: none !important;
  }
}

body,
html {
  overflow-x: hidden;
}

body:not(.page-template-page-landing) .content-area {
  padding: var(--content-inset);
}

body.admin-bar #masthead {
  margin-top: 32px;
}

img {
  border-radius: 10px;
}

::-moz-selection {
  background: var(--clr-primary);
  color: white;
}

::selection {
  background: var(--clr-primary);
  color: white;
}

.content-area[data-has-page-header=false] {
  margin-top: calc(var(--header-height) + 3rem);
}

.preview-image {
  transition: opacity 0.7s ease;
  animation: fadeIn;
  filter: blur(10px);
  height: 100%;
  width: 100%;
}

.hero-slide.loaded .preview-image {
  opacity: 0;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
button,
input[type=button],
input[type=reset],
input[type=submit] {
  border-radius: 0;
}

form .gform_body input[type=text],
form .gform_body textarea {
  font-size: clamp(20px, 2vw, 23px) !important;
  padding: 15px 25px !important;
  font-family: "Lato";
  line-height: 1;
  border: 2px solid #718289 !important;
  border-radius: 6px;
  -webkit-appearance: none;
}
form .gform_body input[type=text]:hover,
form .gform_body textarea:hover {
  border-color: #111111 !important;
}
/* ... */

